2006-01-27  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/dixmods/Makefile.am:
	* hw/xgl/glx/Makefile.am:
	Remove leftover variables for cfb24 build, and finish commenting out
	Xglx standalone stuff, which some versions of automake get whiny about.

2006-01-27  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* hw/xfree86/scanpci/pci.ids:
	* hw/xfree86/scanpci/xf86PciStdIds.h:
	update pci ids

2006-01-25  Donnie Berkholz  <spyderous@gentoo.org>

	* GL/symlink-mesa.sh:
	Really allow linking against Mesa trunk to work.

2006-01-26  Daniel Stone  <daniel@freedesktop.org>

	* xorg-config.h.in:
	Add forgotten HAVE_BACKTRACE define.

2006-01-25  Adam Jackson  <ajax@freedesktop.org>

	* Makefile.am:
	* cfb24/Makefile.am:
	* cfb24/cfbrrop24.h:
	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/xf8_32wid/Makefile.am:
	* hw/xfree86/xf8_32wid/cfb8_32wid.h:
	* hw/xfree86/xf8_32wid/cfb8_32widmodule.c:
	* hw/xfree86/xf8_32wid/cfbscrinit.c:
	* hw/xfree86/xf8_32wid/cfbwid.c:
	* hw/xfree86/xf8_32wid/cfbwindow.c:
	Remove xf8_32wid, it's dead code with no maintainer interest.  Also
	remove cfb24, since xf8_32wid was the only user.

	* configure.ac:
	* Makefile.am:
	* ilbm/*:
	* iplan2p4/*:
	Speed up checkout and autogen by removing disused iplan2p4 and ilbm.

2006-01-19  Daniel Stone  <daniel@freedesktop.org>

	* GL/symlink-mesa.sh:
	Make error() bomb with exit 1, not 0.

2006-01-18  Eric Anholt  <anholt@FreeBSD.org>

	* GL/glx/indirect_dispatch.c:
	* GL/glx/indirect_dispatch_swap.c:
	* GL/glx/indirect_util.c:
	Only try to use byteswap.h on linux.  Assume that everyone else
	(thinking of BSDs here) has sys/endian.h, and use macros as appropriate
	for the names.  This should probably be in a gloabl header.

2006-01-18  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbblt.c:
	More kdrive merge, fast path fbBlt to use memcpy() when possible.
	Good for -5% to 60% speedup on XGetImage, and 0% to 10% speedup on